# microservice-architecture

./: .dockerignore  .env  CMakeLists.txt  Dockerfile  docker-compose.yml  docker-entry.sh  vcpkg.json
src/service-one/: CMakeLists.txt  config.yml
src/service-one/src/: ServiceOneAgent.hpp  ServiceOneImpl.hpp  main.cpp
src/service-two/: CMakeLists.txt  config.yml
src/service-two/src/: ServiceTwoAgent.hpp  ServiceTwoImpl.hpp  main.cpp
tests/: services.http
